--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "keywords": [],
   "author": "Martin Facciuto",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "fs-extra": "11.2.0"
   }
